syntax = "proto3";

option go_package="handworks/common/grpc/booking";
import "google/protobuf/timestamp.proto";

service BookingService {
  rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse);
  rpc GetBookingById(GetBookingByIdRequest) returns (GetBookingByIdResponse);
  rpc GetBookingByUId(GetBookingByUIdRequest) returns (GetBookingByUIdResponse);
  rpc UpdateBooking(Booking) returns (UpdateBookingResponse);
  rpc DeleteBooking(DeleteBookingByIDRequest) returns (DeleteBookingByIDResponse);
}

message Address {
    string address_human = 1;
    double address_lat = 2;
    double address_lng = 3;
}

message CleaningEquipment {
  string id = 1;
  string name = 2;
  string type = 3;
  string photo_url = 4;
}

message CleaningResources {
  string id = 1;
  string name = 2;
  string type = 3;
  string photo_url = 4;
}

message CleanerAssigned {
  string id = 1;
  string cleaner_first_name = 2;
  string cleaner_last_name = 3;
  string pfp_url = 4;
}

message ServiceDetail {
  oneof type {
    GeneralCleaningDetails general = 1;
    CouchCleaningDetails couch = 2;
    MattressCleaningDetails mattress = 3;
    CarCleaningDetails car = 4;
    PostConstructionCleaningDetails post = 5;
  }
}

message Booking {
  string id = 1;
  BaseBookingDetails base = 2;
  Services main_service = 3;
  repeated AddOn addons = 4;
  repeated CleaningEquipment equipment = 5;
  repeated CleaningResources resources = 6;
  repeated CleanerAssigned cleaners = 7;
  float total_price = 8;
}

message AddOn {
  string id = 1;
  Services serviceDetail = 2;
  float price = 3;
}
message AddOnRequest {
  ServicesRequest serviceDetail = 1;
}

message BaseBookingDetails {
    string id = 1;
    string cust_id = 2;
    string customer_first_name = 3;
    string customer_last_name = 4;
    Address address = 5;
    google.protobuf.Timestamp startSched = 6;
    google.protobuf.Timestamp endSched = 7;
    int32 dirty_scale = 8; // 1 - 5
    string payment_status = 9;
    string review_status = 10;
    repeated string photos = 11; // file IDs or URLs
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
    string quote_id = 14;
}
message BaseBookingDetailsRequest{
    string cust_id = 1;
    string customer_first_name = 2;
    string customer_last_name = 3;
    Address address = 4;
    google.protobuf.Timestamp startSched = 5;
    google.protobuf.Timestamp endSched = 6;
    int32 dirty_scale = 7; // 1 - 5
    string payment_status = 8;
    string review_status = 9;
    repeated string photos = 10; // file IDs or URLs
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
    string quote_id = 13;
}

message CreateBookingRequest {
  BaseBookingDetailsRequest base = 1;
  ServicesRequest main_service = 2;
  repeated AddOnRequest addons = 3;
}

message CreateBookingResponse {
  Booking book = 1;
}

message ServicesRequest{
  MainServiceType service_type = 1;
  ServiceDetail details = 2;
}

message Services {
  string id = 1;
  MainServiceType service_type = 2;
  ServiceDetail details = 3;
}

enum MainServiceType {
  SERVICE_TYPE_UNSPECIFIED = 0;
  GENERAL_CLEANING = 1;
  COUCH = 2;
  MATTRESS = 3;
  CAR = 4;
  POST = 5;
}

enum HomeType {
    CONDO_ROOM = 0;
    HOUSE = 1;
    COMMERCIAL = 2;
}
enum CouchType {
    SEATER_1 = 0;
    SEATER_2 = 1;
    SEATER_3 = 2;
    SEATER_3_LTYPE_SMALL = 3;
    SEATER_3_LTYPE_LARGE = 4;
    SEATER_4_LTYPE_SMALL = 5;
    SEATER_4_LTYPE_LARGE = 6;
    SEATER_5_LTYPE = 7;
    SEATER_6_LTYPE = 8;
    OTTOMAN = 9;
    LAZBOY = 10;
    CHAIR = 11;
}
enum BedType {
    KING = 0;
    QUEEN = 1;
    KING_HEADBAND = 2;
    QUEEN_HEADBAND = 3;
    DOUBLE = 4;
    SINGLE = 5;
    BED_PILLOW = 6;
}
enum CarType {
    SEDAN = 0;
    MPV = 1;
    SUV = 2;
    PICKUP = 3;
    VAN = 4;
    CAR_SMALL = 5;    
}
// General cleaning
message GeneralCleaningDetails {
  HomeType home_type = 2;
  int32 sqm = 3;
}

// Couch cleaning
message CouchCleaningSpecifications {
  CouchType couch_type = 1;
  int32 width_cm = 2;
  int32 depth_cm = 3;
  int32 height_cm = 4;
  int32 quantity = 5;
}
message CouchCleaningDetails {
  repeated CouchCleaningSpecifications cleaningSpecs = 1;
  int32 bed_pillows = 2;
}

// Mattress cleaning
message MattressCleaningSpecifications {
  BedType bed_type = 1;
  int32 width_cm = 2;
  int32 depth_cm = 3;
  int32 height_cm = 4;
  int32 quantity = 5;
}
message MattressCleaningDetails {
  repeated MattressCleaningSpecifications cleaningSpecs = 1;
}
// Car interior cleaning
message CarCleaningSpecifications {
  CarType carType = 1;
  int32 quantity = 2;
}
message CarCleaningDetails {
  repeated CarCleaningSpecifications cleaningSpecs = 1;
  int32 child_seats = 2;
}

// Post-construction cleaning
message PostConstructionCleaningDetails {
  int32 sqm = 2;
}

message GetBookingByIdRequest {
  string booking_id = 1;
}

message GetBookingByIdResponse {
  Booking booking = 1;
}

message GetBookingByUIdRequest {
  string user_id = 1;
}

message GetBookingByUIdResponse {
  repeated Booking Booking = 1;
}

message DeleteBookingByIDRequest {
  string booking_id = 1;
}

message DeleteBookingByIDResponse {
  bool success = 1;
}

message UpdateBookingResponse {
  Booking booking = 1;
}